# ice-adapter

./: .editorconfig  .gitignore  .gitmodules  .project  .travis.yml  CHANGELOG.md  CMakeLists.txt  Controller.h  GPGNetClient.cpp  GPGNetClient.h  GPGNetConnection.cpp  GPGNetConnection.h  GPGNetMessage.cpp  GPGNetMessage.h  GPGNetMessage.ts  GPGNetServer.cpp  GPGNetServer.h  GPGNetServer.ts  HttpClient.cpp  HttpClient.h  HttpServer.cpp  HttpServer.h  IceAdapter.cpp  IceAdapter.h  IceAdapter.h.old  IceAdapter.ts  IceAdapterOptions.cpp  IceAdapterOptions.h  IceAgent.cpp  IceAgent.h  IceStream.cpp  IceStream.h  JsonRpc.cpp  JsonRpc.h  JsonRpcClient.cpp  JsonRpcClient.h  JsonRpcProtocol.cpp  JsonRpcProtocol.h  JsonRpcServer.cpp  JsonRpcServer.h  (+49 more)
cpp/: .travis.yml  CMakeLists.txt  GPGNetMessage.h  GPGNetServer.cpp  GPGNetServer.h  IceAdapter.cpp  IceAdapter.h  IceAdapterOptions.cpp  IceAdapterOptions.h  IceTest.cpp  IceTest.h  JsonRpcServer.cpp  JsonRpcServer.h  PeerRelay.cpp  PeerRelay.h  PeerRelayObservers.cpp  logging.cpp  logging.h  main.cpp
devtest/: HttpTest.cpp  HttpTest.h  HttpTest2.cpp  HttpTest2.h  PjIceGlobal.cpp  PjIceGlobal.h  PjIceStreamTransport.cpp  PjIceStreamTransport.h  icetest.cpp  my_async_server.hpp  myice1.cpp  pjsua2_demo.cpp
gefafwisp-licer/: .gitignore
java/: .gitignore  build.gradle  iceServer.cfg  settings.gradle
java-ice-adapter/: build.gradle
java-ice-adapter/src/com/faforever/iceadapter/: IceAdapter.java
java-ice-adapter/src/com/faforever/iceadapter/gpgnet/: FaDataInputStream.java  GameState.java  LobbyInitMode.java
java-ice-adapter/src/com/faforever/iceadapter/ice/: CandidatePacket.java  CandidatesMessage.java  IceState.java  Peer.java  PeerIceModule.java
java-ice-adapter/src/com/faforever/iceadapter/rpc/: RPCHandler.java  RPCService.java
java-ice-adapter/src/com/faforever/iceadapter/util/: ArgumentParser.java  CandidateUtil.java  Executor.java  NetworkToolbox.java
java-ice-adapter/src/testing/: IceTest.java  SignallingServer.java
java/client/: build.gradle
java/client/src/main/java/client/: GUI.java  TestClient.java
java/ice-adapter/: build.gradle
java/ice-adapter/src/main/resources/: debugWindow.fxml  debugWindowStyle.css  logback.xml
java/ice-adapter/src/test/java/: IceTest.java  SignallingServer.java
java/server/: build.gradle
java/server/src/main/java/server/: Game.java  IceTestServerConfig.java  ScenarioRunner.java  Webserver.java
java/server/src/main/resources/: login.html
java/shared/: build.gradle
java/shared/src/main/java/common/: ICEAdapterTest.java
java/shared/src/main/java/data/: IceStatus.java
java/shared/src/main/java/logging/: Logger.java
java/shared/src/main/java/net/: ClientInformationMessage.java  ConnectToPeerMessage.java  EchoResponse.java  HolePunchingMessage.java  IceMessage.java  LeaveGameMessage.java  ScenarioOptionsMessage.java
javatesting/: build.gradle
javatesting/client/src/client/: GUI.java  TestClient.java  TestServerAccessor.java
javatesting/client/src/client/experimental/: HolePunching.java
javatesting/client/src/client/forgedalliance/: FaDataOutputStream.java  ForgedAlliance.java
javatesting/client/src/client/ice/: ICEAdapter.java
javatesting/client/src/client/nativeAccess/: Kernel32.java  NativeAccess.java
javatesting/server/src/: overview.html
javatesting/server/src/server/: CollectedInformation.java  Game.java  HolePunchingServer.java  Player.java  Scenario.java  ScenarioRunner.java  TestServer.java  Webserver.java
javatesting/server/src/server/scenarios/: DefaultScenario.java  RandomStopScenario.java
javatesting/src/com/github/nocatch/: NoCatchException.java
javatesting/src/common/: ICEAdapterTest.java
javatesting/src/data/: ForgedAlliancePeer.java  IceStatus.java
javatesting/src/logging/: Logger.java
javatesting/src/net/: ClientInformationMessage.java  DisconnectFromPeerMessage.java  EchoRequest.java  HostGameMessage.java  IceAdapterSignalMessage.java  IceMessage.java  JoinGameMessage.java
javatesting/src/util/: Util.java
legacy_testclient/: CMakeLists.txt  GPGNetClient.cpp  GPGNetClient.h  GPGNetMessage.cpp  JsonRpcProtocol.h  JsonRpcQTcpServer.cpp  Pingtracker.cpp  Pingtracker.h  Testclient.h  Testclient.ui  Testserver.cpp
libnicetest/: CMakeLists.txt  Controller.cpp  HttpClient.cpp  IceAdapter.cpp  IceAdapter.h  IceAgent.h  IceStream.cpp  IceStream.h  main.cpp  sdpserver.py
libretest/: CMakeLists.txt  ltest1.cpp  ltest1.h
pytesting/: GPGNet.py  P2PConnection.py  ServerConnection.py  TestClient.py  main.py  quit.py  reinit.py  test.py
pytesting/base/: Client.py  IceAdapter.py  JsonRpcTcpClient.py  P2PConnection.py  Runner.py  decorators.py
python/: downlordtest.py  host_game.py  join_game.py  rpcclient.py  rpcserver.py  sdpserver.py  simpletest.py  test.py
reice/: ReIceAdapter.cpp  ReIceAdapter.h  ReIceAgent.cpp  ReIceAgent.h  ReIceStream.cpp  ReIceStream.h  reicetest.c
src/: GPGNetMessage.ts  GPGNetServer.ts  IceAdapter.ts  PeerRelay.ts  index.ts  logger.ts  options.ts
test/: ChristmasWidget.cpp  ChristmasWidget.h  GPGNetClient.cpp  GPGNetClient.h  GPGNetServerTest.cpp  IceAdapterTest.cpp  IceAdapterTest2.cpp  JsonRcpClient.cpp  JsonRcpClient.h  JsonRpcClient.cpp  JsonRpcClient.h  PeerRelayTest.cpp  PeerWidget.h  PeerWidget.ui  Pingtracker.cpp  Pingtracker.h  Process.h  TestClient.cpp  TestServer.cpp  TestServer.h  Testclient.cpp  Testclient.h  Testclient.ui  Testserver.cpp  Testserver.h  WebrtcTest.cpp  WebrtcTestSimple2Peers.cpp  WebrtcTestWithPingtracker.cpp
testclient/: CMakeLists.txt  ChristmasWidget.cpp  ChristmasWidget.qrc  Dockerfile  GPGNetClient.h  GPGNetMessage.cpp  IceCandidate.cpp  IceCandidate.h  JsonRpcProtocol.cpp  JsonRpcProtocol.h  JsonRpcQTcpServer.cpp  JsonRpcQTcpServer.h  JsonRpcQTcpSocket.cpp  JsonRpcQTcpSocket.h  PeerWidget.cpp  Pingtracker.cpp  Pingtracker.h  Socket.cpp  Socket.h  Testclient.cpp  Testclient.h  Testclient.ui  Testserver.cpp  Testserver.h  logging.cpp
testing/: GPGNet.py  IceAdapter.py  JsonRpcTcpClient.py  TestClient.py  main.py  quit.py  test.py
tests/: GPGNetMessage-test.ts
(+39 files in other folders)
