include_directories(re/include)


if (UNIX)
  set(re_additional_src
    re/src/main/epoll.c
    re/src/net/posix/pif.c
    re/src/net/linux/rt.c
    re/src/net/ifaddrs.c
    )
  set(re_additional_flags
    -DHAVE_ROUTE_LIST
    )
else()
  set(re_additional_src
    re/src/net/win32/wif.c
    re/src/dns/win32/srv.c
    )

endif()

add_library(re
  re/src/base64/b64.c
  re/src/crc32/crc32.c
  re/src/dbg/dbg.c
  re/src/dns/client.c
  re/src/dns/cstr.c
  re/src/dns/dname.c
  re/src/dns/hdr.c
  re/src/dns/ns.c
  re/src/dns/res.c
  re/src/dns/rr.c
  re/src/dns/rrlist.c
  re/src/fmt/ch.c
  re/src/fmt/hexdump.c
  re/src/fmt/pl.c
  re/src/fmt/print.c
  re/src/fmt/prm.c
  re/src/fmt/regex.c
  re/src/fmt/str.c
  re/src/fmt/str_error.c
  re/src/fmt/time.c
  re/src/fmt/unicode.c
  re/src/hash/hash.c
  re/src/hash/func.c
  re/src/hmac/hmac.c
  re/src/hmac/hmac_sha1.c
  re/src/httpauth/basic.c
  re/src/httpauth/digest.c
  re/src/list/list.c
  re/src/main/init.c
  re/src/main/main.c
  re/src/main/method.c
  re/src/mbuf/mbuf.c
  re/src/md5/md5.c
  re/src/md5/wrap.c
  re/src/mem/mem.c
  re/src/msg/ctype.c
  re/src/msg/param.c
  re/src/net/if.c
  re/src/net/net.c
  re/src/net/netstr.c
  re/src/net/rt.c
  re/src/net/sock.c
  re/src/net/sockopt.c
  re/src/sa/ntop.c
  re/src/sa/printaddr.c
  re/src/sa/pton.c
  re/src/sa/sa.c
  re/src/sdp/attr.c
  re/src/sdp/format.c
  re/src/sdp/media.c
  re/src/sdp/msg.c
  re/src/sdp/session.c
  re/src/sdp/str.c
  re/src/sdp/util.c
  re/src/sha/sha1.c
  re/src/sip/addr.c
  re/src/sip/auth.c
  re/src/sip/contact.c
  re/src/sip/cseq.c
  re/src/sip/ctrans.c
  re/src/sip/dialog.c
  re/src/sip/keepalive.c
  re/src/sip/keepalive_udp.c
  re/src/sip/msg.c
  re/src/sip/reply.c
  re/src/sip/request.c
  re/src/sip/sip.c
  re/src/sip/strans.c
  re/src/sip/transp.c
  re/src/sip/via.c
  re/src/sipreg/reg.c
  re/src/sipsess/sess.c
  re/src/sipsess/accept.c
  re/src/sipsess/ack.c
  re/src/sipsess/close.c
  re/src/sipsess/connect.c
  re/src/sipsess/info.c
  re/src/sipsess/listen.c
  re/src/sipsess/modify.c
  re/src/sipsess/reply.c
  re/src/sipsess/request.c
  re/src/stun/addr.c
  re/src/stun/attr.c
  re/src/stun/ctrans.c
  re/src/stun/dnsdisc.c
  re/src/stun/hdr.c
  re/src/stun/ind.c
  re/src/stun/keepalive.c
  re/src/stun/msg.c
  re/src/stun/rep.c
  re/src/stun/req.c
  re/src/stun/stun.c
  re/src/stun/stunstr.c
  re/src/sys/daemon.c
  re/src/sys/endian.c
  re/src/sys/fs.c
  re/src/sys/rand.c
  re/src/sys/sleep.c
  re/src/sys/sys.c
  re/src/tcp/tcp.c
  re/src/tcp/tcp_high.c
  re/src/tmr/tmr.c
  re/src/udp/udp.c
  re/src/udp/mcast.c
  re/src/uri/uri.c
  re/src/uri/ucmp.c
  re/src/uri/uric.c
  ${re_additional_src}
  )

target_link_libraries(re
  resolv)

target_compile_definitions(re
  PUBLIC
    -DHAVE_INTTYPES_H
    -DHAVE_INET6
   # -DHAVE_LIBRESOLV
    ${re_additional_flags}
  )

add_executable(ltest1
  ltest1.cpp
  )

target_link_libraries(ltest1
  re
  )
